(feat) Can highlight hashtag elements, but the highlighted text alignment is not correct.

--- a/challenge_29/styles.scss
+++ b/challenge_29/styles.scss
@@ -8,25 +8,68 @@ body, html {
 } 
 
 .card {
-	width: 25.25rem;
-	height: 9.5rem;
+	width: 404px;
+	height: 152px;
 	background-color: white;
 	margin: 6.26rem auto 0;
 	border-radius: .25rem;
 	overflow: hidden;
+	border: 1px solid lightgrey;
+	// display: block;
 	
 	&__content {
 		height: 100%;
 		width: 100%;
-		margin: .5rem .5rem .25rem .5rem;
+		margin: 8px 0px 0px 8px;
+		position: relative;
 	}
 }
 
 #textarea {
 	border: none;
-	width: 24.5rem;
-	height: 8.75rem;
-	border-radius: .25rem;
+	width: 392px;
+	height: 140px;
+	border-radius: 0;
+	margin: 0;
 	outline: none;
-	font-size: .85rem;
+	font-size: 14px;
+	background-color: transparent;
+	z-index: 2;
+	position: absolute;
+	line-height: 20px;
+	color: rgba(50, 50, 50, 0.5);
 }
+
+.backdrop {
+	width: 392px;
+	height: 140px;
+	overflow: auto;
+	font-size: 14px;
+	line-height: 20px;
+	position: absolute;
+	margin: 0;
+	left: 0;
+	top: 0;
+
+	&__highlights {
+		font-size: 14px;
+		line-height: 20px;
+		white-space: pre-wrap;
+		word-wrap: break-word;
+		color: red;
+		margin: 0;
+		position: absolute;
+		left: 2px;
+		top: 1px;
+	}
+}
+
+mark {
+	color: red;
+	font-size: 14px;
+	border-radius: 3px;
+	background-color: rgb(126, 192, 255);
+	line-height: 20px;
+	margin: 0;
+}
+
